# ariadne

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_TEST.md  README.md  pyproject.toml
.claude/agents/: reviewer.md  tdd.md
.claude/skills/kanban/: SKILL.md
.tasks/: 0001-package-scaffold.md  0002-domain-schema.md  0003-in-memory-graph-store.md  0004-markdown-vault-serialization.md  0005-phase0-gold-standard.md  0006-eval-harness.md  0007-llm-extraction-provider.md  0008-extraction-pipeline-cli.md  0009-provenance-validator.md  0010-phase1-baseline-eval.md  0011-multi-source-pipeline.md  0012-entity-resolution-core.md  0013-llm-resolution-adjudicator.md  0014-resolve-cli-phase2-baseline.md  0015-query-traversal-layer.md  0016-mcp-server.md  0017-mermaid-export.md  0018-ruff-formatter.md  0019-llm-model-factory.md  0020-extraction-pydantic-ai.md  0021-adjudicator-pydantic-ai.md  0022-logfire-observability.md  0023-sqlite-graph-store.md  0024-store-factory-cli-wiring.md  0025-web-api.md  0026-web-ui.md  _template.md
scripts/: kanban.py
src/ariadne/: __init__.py  baseline.py  cli.py  eval.py  export.py  extraction.py  graph_store.py  labels.py  llm.py  mcp_server.py  pipeline.py  query.py  resolution.py  schema.py  sqlite_store.py  validation.py  vault.py  web.py
src/ariadne/static/: app.js  index.html  style.css
tests/: test_kanban.py
tests/ariadne/: test_baseline.py  test_cli.py  test_eval.py  test_export.py  test_extraction.py  test_gold_standard.py  test_graph_store.py  test_llm.py  test_mcp_server.py  test_pipeline.py  test_query.py  test_resolution.py  test_schema.py  test_validation.py  test_vault.py  test_version.py  test_web.py
(+30 files in other folders)
