[project]
name = "ariadne"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "pyyaml",
    "textual",
]

[project.scripts]
ariadne = "ariadne.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]
