[project]
name = "ariadne"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "logfire>=4.38.0",
    "mcp>=1.28.1",
    "pydantic-ai-slim[anthropic,openai]>=2.16.0",
    "pyyaml",
    "textual",
]

[project.scripts]
ariadne = "ariadne.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]
